; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_mergeinfo.c_svn_client_mergeinfo_log2.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_mergeinfo.c_svn_client_mergeinfo_log2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_client_mergeinfo_log2(i32 %0, i8* %1, i32* %2, i8* %3, i32* %4, i32* %5, i32* %6, i32 %7, i8* %8, i32 %9, i32 %10, i32* %11, i32* %12, i32* %13) #0 {
  %15 = alloca i32, align 4
  %16 = alloca i8*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i8*, align 8
  %19 = alloca i32*, align 8
  %20 = alloca i32*, align 8
  %21 = alloca i32*, align 8
  %22 = alloca i32, align 4
  %23 = alloca i8*, align 8
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32*, align 8
  %27 = alloca i32*, align 8
  %28 = alloca i32*, align 8
  store i32 %0, i32* %15, align 4
  store i8* %1, i8** %16, align 8
  store i32* %2, i32** %17, align 8
  store i8* %3, i8** %18, align 8
  store i32* %4, i32** %19, align 8
  store i32* %5, i32** %20, align 8
  store i32* %6, i32** %21, align 8
  store i32 %7, i32* %22, align 4
  store i8* %8, i8** %23, align 8
  store i32 %9, i32* %24, align 4
  store i32 %10, i32* %25, align 4
  store i32* %11, i32** %26, align 8
  store i32* %12, i32** %27, align 8
  store i32* %13, i32** %28, align 8
  %29 = load i32, i32* %15, align 4
  %30 = load i8*, i8** %16, align 8
  %31 = load i32*, i32** %17, align 8
  %32 = load i8*, i8** %18, align 8
  %33 = load i32*, i32** %19, align 8
  %34 = load i32*, i32** %20, align 8
  %35 = load i32*, i32** %21, align 8
  %36 = load i32, i32* %22, align 4
  %37 = load i8*, i8** %23, align 8
  %38 = load i32, i32* %24, align 4
  %39 = load i32, i32* %25, align 4
  %40 = load i32*, i32** %26, align 8
  %41 = load i32*, i32** %27, align 8
  %42 = load i32*, i32** %28, align 8
  %43 = load i32*, i32** %28, align 8
  %44 = call i32 @svn_client__mergeinfo_log(i32 %29, i8* %30, i32* %31, i32* null, i8* %32, i32* %33, i32* %34, i32* %35, i32 %36, i8* %37, i32 %38, i32 %39, i32* %40, i32* %41, i32* null, i32* %42, i32* %43)
  %45 = call i32* @svn_error_trace(i32 %44)
  ret i32* %45
}

declare dso_local i32* @svn_error_trace(i32) #1

declare dso_local i32 @svn_client__mergeinfo_log(i32, i8*, i32*, i32*, i8*, i32*, i32*, i32*, i32, i8*, i32, i32, i32*, i32*, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
